Added MVP requirements

--- a/about.html
+++ b/about.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> ABOUT </h1>
+    <h1>About Me</h1>
+    <p>I have been super blessed to be a full-time mom to my two little boys for the past four years. 
+    Prior to becoming a mom, I served as Executive Director of a US State Department initiated not-for-profit organization in Indonesia that supports entrepreneurs. 
+    It was at the organization that I became interested in the power of technology and hence, I wanted to learn how to code.
+I usually code in the evenings after my children are in bed and my husband is around to take care of them in case they get up as they usually do.
+Life as a mom and a student at a coding school is not easy, but so far it has been really fun and rewarding. 
+I have a master's degree in social work/social enterprise administration from Columbia University. 
+I also founded a social enterprise that helps people get the mental health support they need through lay counseling.
+I enjoy traveling to new places and spending time with my family.</p>
 </body>
 </html>
