--- a/index.html
+++ b/index.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Angelyn Liem's Portfolio</title>
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h1>Angelyn Liem</h1>
+            <nav class="navigationitems">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="projects.html">Projects</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </header>
+        <section class="intro">
+            <h2>Hello! I'm a Full Stack Web Development student at Lambda School.</h2>
+            <p>Check out my projects and let me know what you think!</p>
+            <div>
+                <form action="projects.html">
+                    <input type="submit" value="My Projects"/>
+                </form>
+                <form action="contact.html">
+                    <input type="submit" value="Contact Me"/>
+                </form>
+            </div>
+        </section>
+        <section class="gallery">
+            <figure>
+                <img src="https://picsum.photos/200" alt="placeholder">
+            <figcaption>First Project</figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200"alt="placeholder">
+            <figcaption>Second Project</figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200"alt="placeholder">
+            <figcaption>Third Project</figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200"alt="placeholder">
+            <figcaption>Fourth Project</figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200"alt="placeholder">
+            <figcaption>Fifth Project</figcaption>
+            </figure>
+            <figure>
+                <img src="https://picsum.photos/200"alt="placeholder">
+            <figcaption>Sixth Project</figcaption>
+        </figure>
+        </section>
+        <footer>
+<nav class="socialmedia">
+    <a href="https://www.instagram.com/angelyn.can.code" class="fa fa-instagram"></a>
+    <a href="https://www.github.com/angelynaliem" class="fa fa-github"></a>
+    <a href="https://www.linkedin.com/angelynaliem" class="fa fa-linkedin"></a>
+</nav>
+        </footer>
+    </div>
 </body>
 </html>
