--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> CONTACT </h1>
+    <h1>Get In Touch</h1>
+    <div>
+      <form method="POST" action="https://formspree.io/YOUREMAILHERE">
+        <label for="name">Your Name</label>
+        <input type="name" name="name">
+        <label for="email">Your Email</label>
+        <input type="email" name="email">
+        <label for="message">Your Message</label>
+        <textarea name="message"></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
 </body>
 </html>
